# Hazel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  hazel-app.ini  hazel-editor.ini  imgui.ini  premake5.lua
Editor/: EditorApplication.cpp  EditorLayer.cpp  EditorLayer.h
Editor/src/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Hazel/: Hazel.h
Hazel/src/: hzpch.h
Hazel/src/Hazel/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h
Hazel/src/Hazel/Debug/: Instrumentor.h
Hazel/src/Hazel/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Hazel/src/Hazel/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Hazel/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Hazel/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  ScriptableEntity.h
Hazel/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
resources/assets/shaders/: Texture.glsl
